<resources>
    <string name="app_name">YiJi</string>

    <string name="sync">Sync</string>
    <string name="setting">Setting</string>


    <string name="exit">Exit</string>
    <string name="publicKey">MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCplL7aQorlDn8U+hhYGQ6PM4UUKkNMsgwgf/Ia
VTFuFXIurpsjAeJjSiNj+nfEqzbb1Fwp+GPg/69bwwWJSN9xLBka3DiBCAKZZ8r2AQy60RA6DCui
MJ9Fu3Vg+v9IhdrGG7QjCx/JJsMtcPgUzQ99EQVhY2uBO29g9UW2NY6L0wIDAQAB</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="addRecord">Add Record</string>

    <string name="tag_sum_pie">Sum Pie</string>
    <string name="tag_sum_histogram">Sum Histogram</string>
    <string name="tag_meal">Dinner</string>
    <string name="tag_closet">Clothing &amp; Footwear</string>
    <string name="tag_home">Home</string>
    <string name="tag_traffic">Traffic</string>
    <string name="tag_vehicle_maintenance">Vehicle Maintenance</string>
    <string name="tag_book">Book</string>
    <string name="tag_hobby">Hobby</string>
    <string name="tag_internet">Internet</string>
    <string name="tag_friend">Friend</string>
    <string name="tag_education">Education</string>
    <string name="tag_entertainment">Entertainment</string>
    <string name="tag_medical">Medical</string>
    <string name="tag_insurance">Insurance</string>
    <string name="tag_donation">Donation</string>
    <string name="tag_sport">Sport</string>
    <string name="tag_snack">Snack</string>
    <string name="tag_music">Music</string>
    <string name="tag_fund">Fund</string>
    <string name="tag_drink">Drink</string>
    <string name="tag_fruit">Fruit</string>
    <string name="tag_film">Film</string>
    <string name="tag_baby">Baby</string>
    <string name="tag_partner">Partner</string>
    <string name="tag_housing_loan">Housing Loan</string>
    <string name="tag_pet">Pet</string>
    <string name="tag_telephone_bill">Telephone Bill</string>
    <string name="tag_travel">Travel</string>
    <string name="tag_lunch">Lunch</string>
    <string name="tag_breakfast">Breakfast</string>
    <string name="tag_midnight_snack">Midnight Snack</string>

    <string name="tag_empty">No records!</string>
    <string name="remark_hint">Add remarks for your record</string>
    <string name="number_format_error">Number cannot be null!</string>
    <string name="save_success">Save success!</string>

    <string name="toast_no_tag">Just...give me a tag~</string>

    <string name="today_view_today">Today</string>
    <string name="today_view_yesterday">Yesterday</string>
    <string name="today_view_this_week">This Week</string>
    <string name="today_view_last_week">Last Week</string>
    <string name="today_view_this_month">This Month</string>
    <string name="today_view_last_month">Last Month</string>
    <string name="today_view_this_year">This Year</string>
    <string name="today_view_last_year">Last Year</string>

    <string name="today_date_string">today</string>
    <string name="yesterday_date_string">yesterday</string>
    <string name="this_week_date_string">this week</string>
    <string name="last_week_date_string">last week</string>
    <string name="this_month_date_string">this month</string>
    <string name="last_month_date_string">last month</string>
    <string name="this_year_date_string">this year</string>
    <string name="last_year_date_string">last year</string>

    <string name="january_short">Jan.</string>
    <string name="february_short">Feb.</string>
    <string name="march_short">Mar.</string>
    <string name="april_short">Apr.</string>
    <string name="may_short">May</string>
    <string name="june_short">June</string>
    <string name="july_short">July</string>
    <string name="august_short">Aug.</string>
    <string name="september_short">Sept.</string>
    <string name="october_short">Oct.</string>
    <string name="november_short">Nov.</string>
    <string name="december_short">Dec.</string>

    <string name="today_empty">New day!</string>
    <string name="yesterday_empty">No records.</string>
    <string name="this_week_empty">New week!</string>
    <string name="last_week_empty">No records.</string>
    <string name="this_month_empty">New month!</string>
    <string name="last_month_empty">No records.</string>
    <string name="this_year_empty">Happy new year!</string>
    <string name="last_year_empty">No records.</string>

    <string name="monday_short">MON</string>
    <string name="tuesday_short">TUE</string>
    <string name="wednesday_short">WED</string>
    <string name="thursday_short">THU</string>
    <string name="friday_short">FRI</string>
    <string name="saturday_short">SAT</string>
    <string name="sunday_short">SUN</string>

    <string name="check">check</string>

    <string name="get">Get!</string>

    <string name="at">at </string>
    <string name="on">on </string>
    <string name="in">in </string>

    <string name="o_clock">o\'clock</string>
    <string name="last">last</string>

    <!--tab text-->
    <string name="homePage">HomePage</string>
    <string name="zhihuDaily">Daily</string>
    <string name="me">Me</string>

    <string name="share_summary_zhihu">From Zhihu</string>
    <string name="we_chat">WeChat</string>
    <string name="moments">Moments</string>
    <string name="qzone">Qzone</string>
    <string name="other">Other</string>
    <string name="share_to">Share to</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_button">Sign in</string>
    <string name="register_button">Sign up</string>

    <string name="register_user_name">Show me a cool user name!</string>
    <string name="register_user_email">You can regain your password by email.</string>
    <string name="register_password">I can keep secret!</string>
    <string name="go_register">Register!</string>

    <string name="register_idle">Sign up</string>
    <string name="register_complete">Sign up successfully</string>
    <string name="register_error">Sign up failed, tap to retry</string>

    <string name="change_account_book_name_successfully">Change name successfully</string>
    <string name="change_account_book_name_fail">Change name fail</string>
    <string name="change_and_update_account_book_name_successfully">
        Change name and update to server successfully
    </string>
    <string name="change_and_update_account_book_name_fail">
        Change name but update to server fail
    </string>

    <string name="register_successfully">Welcome to YiJi!\n</string>
    <string name="register_fail">Register fail!\n</string>
    <string name="login_successfully">Welcome back!\n</string>
    <string name="login_fail">Login fail!\n</string>
    <string name="user_name_exist">User name already exists</string>
    <string name="user_email_exist">Email already exists</string>
    <string name="user_mobile_exist">
        This mobile has been registered!\n
        Please use the original account.
    </string>
    <string name="network_disconnection">Network disconnection</string>

    <string name="user_name_or_password_incorrect">User doesn\'t exist or password incorrect!</string>
    <string name="name_or_email_inexist">The user name or email doesn\'t exist!</string>
    <string name="password_wrong">Password is incorrect!</string>

    <string name="log_out_successfully">Log out successfully!</string>

    <string name="sync_dialog_title">Sync?</string>
    <string name="sync_dialog_content">
        You have already synchronized your settings to YiJi server.
        Would you want to synchronize your old settings to local?
    </string>

    <string name="your_current_account_book_password_is">Your current account book password is changed to </string>
    <string name="sync_to_server_successfully">Sync settings to server successfully!</string>
    <string name="sync_to_server_failed">Sync settings to server failed!\n</string>

    <string name="logout_button">Logout</string>

    <string name="sync_querying_title">Sync</string>
    <string name="sync_querying_content">Sync information now. Please wait.</string>
    <string name="cancel">Cancel</string>

</resources>
