<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.mlstudio.yiji.main.account.AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:background="@color/my_blue"
            android:orientation="vertical"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:src="@drawable/default_user_logo"
                app:civ_border_color="#ffffff"
                app:civ_border_width="1dp" />

        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_use_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/register_user_name"
            android:singleLine="true"
            android:textColor="@color/drawer_text"
            android:textSize="20sp"
            app:met_baseColor="@color/my_blue"
            app:met_clearButton="true"
            app:met_maxCharacters="16"
            app:met_minCharacters="1"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="@color/drawer_text"
            android:textSize="20sp"
            app:met_baseColor="@color/my_blue"
            app:met_clearButton="true"
            app:met_minCharacters="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_login"
                android:gravity="center"
                android:text="@string/register_button"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_login"
                android:gravity="center"
                android:text="@string/login_button"
                android:textColor="@color/white"
                />
        </LinearLayout>


    </LinearLayout>
</ScrollView>